dom/html/input/NumericInputTypes.cpp
@@ -95,8 +95,6 @@ nsresult NumericInputTypeBase::GetRangeUnderflowMessage(nsAString& aMessage) {
 
 bool NumericInputTypeBase::ConvertStringToNumber(nsAString& aValue,
                                                  Decimal& aResultValue) const {
-  // FIXME(emilio, bug 1605158): This should really just be
-  // StringToDecimal(aValue).
   ICUUtils::LanguageTagIterForContent langTagIter(mInputElement);
   aResultValue =
       Decimal::fromDouble(ICUUtils::ParseNumber(aValue, langTagIter));
@@ -120,7 +118,7 @@ bool NumericInputTypeBase::ConvertNumberToString(
   return ok;
 }
 
-/* input type=numer */
+/* input type=number */
 
 bool NumberInputType::IsValueMissing() const {
   if (!mInputElement->IsRequired()) {
@@ -138,6 +136,16 @@ bool NumberInputType::HasBadInput() const {
   nsAutoString value;
   GetNonFileValueInternal(value);
   return !value.IsEmpty() && mInputElement->GetValueAsDecimal().isNaN();
+}
+
+bool NumberInputType::ConvertNumberToString(
+    Decimal aValue, nsAString& aResultString) const {
+  MOZ_ASSERT(aValue.isFinite(), "aValue must be a valid non-Infinite number.");
+
+  aResultString.Truncate();
+  ICUUtils::LanguageTagIterForContent langTagIter(mInputElement);
+  ICUUtils::LocalizeNumber(aValue.toDouble(), langTagIter, aResultString);
+  return true;
 }
 
 nsresult NumberInputType::GetValueMissingMessage(nsAString& aMessage) {
