dom/html/input/NumericInputTypes.h
@@ -34,7 +34,7 @@ class NumericInputTypeBase : public InputType {
 };
 
 // input type=number
-class NumberInputType : public NumericInputTypeBase {
+class NumberInputType final : public NumericInputTypeBase {
  public:
   static InputType* Create(HTMLInputElement* aInputElement, void* aMemory) {
     return new (aMemory) NumberInputType(aInputElement);
@@ -45,6 +45,9 @@ class NumberInputType : public NumericInputTypeBase {
 
   nsresult GetValueMissingMessage(nsAString& aMessage) override;
   nsresult GetBadInputMessage(nsAString& aMessage) override;
+
+  bool ConvertNumberToString(Decimal aValue,
+                             nsAString& aResultString) const override;
 
  protected:
   bool IsMutable() const override;
